adding notification feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,7 @@
         <div id="student-fields" style="display:none;">
           <input type="text" id="branch" name="branch" placeholder="Branch" required />
           <input type="number" id="cgpa" name="cgpa" step="0.01" placeholder="CGPA" required />
+          <input type="number" id="university_roll" name="university_roll" placeholder="University Roll Number" required />
           <input type="text" id="skills" name="skills" placeholder="Skills (comma separated)" required />
         </div>
         <div id="officer-fields" style="display:none;">
