--- a/frontend/student/dashboard.html
+++ b/frontend/student/dashboard.html
@@ -49,11 +49,7 @@
       <section class="dashboard-section notifications-section">
         <h2>Notifications / Alerts</h2>
         <div id="notifications-list" class="notifications-list">
-          <div class="notification-item">
-            <p>Welcome to the placement system! Check out new opportunities.</p>
-            <span class="notification-time">Just now</span>
-          </div>
-          <!-- More notifications can be added dynamically -->
+          <!-- Notifications will be loaded dynamically -->
         </div>
       </section>
 
