adding some new feature

--- a/frontend/officer/dashboard.html
+++ b/frontend/officer/dashboard.html
@@ -39,6 +39,14 @@
         <a href="postings.html" class="view-all-btn">Create New Posting</a>
       </section>
 
+      <!-- Recruitment Management -->
+      <section class="dashboard-section pipeline-section">
+        <h2>Recruitment Management</h2>
+        <div id="application-pipeline" class="pipeline-container">
+          <p>Loading recruitment management...</p>
+        </div>
+      </section>
+
       <!-- Registered Students -->
       <section class="dashboard-section applications-section">
         <h2>Registered Students</h2>
