--- a/frontend/officer/manage.html
+++ b/frontend/officer/manage.html
@@ -13,6 +13,13 @@
       <select id="job-select"></select>
     </div>
     <div id="applications-list"></div>
+
+    <!-- Withdrawn Applications Section -->
+    <h2>Withdrawn Applications</h2>
+    <div id="withdrawn-applications-list">
+      <p>Loading withdrawn applications...</p>
+    </div>
+
     <a href="dashboard.html">Back to Dashboard</a>
   </div>
   <script src="../js/app.js"></script>
@@ -26,6 +33,7 @@
         return;
       }
       loadJobPostings();
+      loadWithdrawnApplications();
     });
 
     // Load job postings into select dropdown
@@ -134,6 +142,19 @@
       } catch (error) {
         console.error('Error updating application status:', error);
         alert('Failed to update application status');
+      }
+    }
+
+    // Load withdrawn applications
+    async function loadWithdrawnApplications() {
+      try {
+        // Since withdrawn applications are deleted, we need to track them differently
+        // For now, we'll show a message that withdrawn applications are not tracked
+        const withdrawnDiv = document.getElementById('withdrawn-applications-list');
+        withdrawnDiv.innerHTML = '<p>Withdrawn applications are removed from the system and not tracked separately.</p>';
+      } catch (error) {
+        console.error('Error loading withdrawn applications:', error);
+        document.getElementById('withdrawn-applications-list').innerHTML = '<p>Error loading withdrawn applications.</p>';
       }
     }
   </script>
